--- a/groups/gtExtensions.tex
+++ b/groups/gtExtensions.tex
@@ -1,20 +1,10 @@
 \chapter{Extensions}
 \section {Transversals} 
 {\bf Definition 1:}
-$G$ is an \emph{extension} of $K$ by $Q$ if $G \triangleright K$ and $G/K \cong Q$
+As before, $G$ is an \emph{extension} of $K$ by $Q$ if $G \triangleright K$ and $G/K \cong Q$
 or equivalently $1 \rightarrow K \rightarrow G \rightarrow Q \rightarrow 1$.
 \\
 \\
-{\bf Theorem 1:}
-If $1 \rightarrow N \rightarrow_{i} G \rightarrow_{\varphi} Q \rightarrow 1$, the following
-are equivalent
-(1) $\exists Q^* \subseteq G: Q^* \rightarrow Q$ and
-(2) $\exists s:Q \rightarrow G$ such that $\varphi \cdot s = id$.
-(3) $G$ is a semi-direct product of $N$ by $Q$ written $N \ltimes Q$; in this
-case, we say $G$ is a split extension of $N$ by $Q$.
-\begin{quote}
-\emph{Proof:}  See the chapter on constructions.
-\end{quote}
 {\bf Extending a group:}
 Suppose $G$ is an extension of $N$ by $H$ and let $\phi: H \rightarrow G/N$.  Pick
 $s:H \rightarrow G$ such that $s(1)=1$ and $\phi(h) = N s(h)$, then 
