--- a/groups/gtRepresentations.tex
+++ b/groups/gtRepresentations.tex
@@ -1266,7 +1266,7 @@ Writing elements of $W_1\oplus W_2$ as
 ordered pairs $(w_1,w_2)$, we have
 $\theta(w_1,w_2)=(\theta_1(w_1),\theta_2(w_2))$ where
 $\theta_1(w_1)=x^{-1}w_1$ and $\theta_2=0$. Hence
-$$Tr(\theta=Tr(\theta_1+Tr(\theta_2=Tr(\theta_1=\chi(x^{-1}).$$
+$$Tr(\theta) =Tr(\theta_1) +Tr(\theta_2) =\chi(x^{-1}).$$
 Secondly, write $e_1=\sum_{g\in G}\lambda_gg$. 
 The endomorphism of ${\mathbb C}G$ which sends any element $w$ to $x^{-1}gw$ has trace
 $|G|$ if $x^{-1}g=1$, i.e., if $g=x$, and $0$ otherwise. Thus as
