I added Lagrange to the group notes.

--- a/groups/gtBasic.tex
+++ b/groups/gtBasic.tex
@@ -182,7 +182,7 @@ $[x, yz]= [x,z] [x,y] [x,y,z]$.
 Straightforward.
 \end{quote}
 {\bf Theorem 5:}
-If $A$ is a cyclic group of maximal order in and abelian group $G$, then $A$ is a direct
+If $A$ is a cyclic group of maximal order in an abelian group $G$, then $A$ is a direct
 factor of $G$.
 \begin{quote}
 \emph{Proof:}  By induction on $|G|$.
@@ -231,4 +231,11 @@ is an elementary abelian $p$-group.
 {\bf Definition 23:} A group, $A$ acts on a set, $\Omega$, if $\forall x \in \Omega$ and $\forall a \in A$,
 $x^a \in \Omega$, $x^e = x$, $x^{(a_1 a_2)} = (x^{a_1})^{a_2}$. If, in addition, $\Omega = G$ is a group and
 $g_1 , g_2 \in G$, then $(g_1 g_2)^a = g_1^a g_2^a$.
+\\
+\\
+{\bf Lagrange's Theorem:}  If $H$ is a subgroup of $G$, $H \leq G$, then $|H| \mid |G|$.
+\begin{quote}
+\emph{Proof:}
+Cosets of $H$ in $G$ are either dijoint or identical.  So $G$ is a disjoint union of sets of order $|H|$.
+\end{quote}
 
