--- a/groups/gtIsomorphism.tex
+++ b/groups/gtIsomorphism.tex
@@ -309,21 +309,21 @@ $ \varphi_1 + \ldots + \varphi_n $ is nilpotent.
 \emph{Proof:}  By induction on $n$.
 \end{quote}
 {\bf Krull-Schmidt Theorem:}  If $G$ has both chain conditions on normal subgroups and
-$G= H_1 \times \ldots \times H_s = K_1 \times \ldots \times K_t$ are
+$G= G_1 \times \ldots \times G_s = H_1 \times \ldots \times H_t$ are
 two decompositions into indecomposable factors then $s=t$ and, after
-reindexing, $H_i \cong K_i$ and for each $r<t$, $G= G_1 \times G_2 \times \ldots
+reindexing, $H_i \cong G_i$ and for each $r<t$, $G= G_1 \times G_2 \times \ldots
 \times G_r \times H_{r+1} \times H_t$. 
 \begin{quote}
 \emph{Proof:}  
 Let $P(0)$ be the statement
 $G= G_1 \times G_2 \times \ldots \times G_s$ and for $1 \le r \le min(s,t)$
-let $P(i)$ be the statement
+let $P(r)$ be the statement
 $G= G_1 \times G_2 \times \ldots \times G_r \times H_{r+1} \times \ldots H_t$.
-$P(0)$ is true by assumption, assume $P(r-1)$.  Let $\pi_i$ (resp $\pi_i'$ be the 
+$P(0)$ is true by assumption. Assume $P(r-1)$.  Let $\pi_i$ (resp $\pi_i'$) be the 
 canonical epimorphisms from
 $G_1 \times G_2 \times \ldots \times G_s$ (resp.
-$G_1 \times G_2 \times \ldots \times G_r \times H_{r+1} \times H_t$ and $\lambda_i$
-(resp $\lambda_i'$) be the inclusion maps, 
+$G_1 \times G_2 \times \ldots \times G_r \times H_{r+1} \times H_t$)
+ and $\lambda_i$ (resp $\lambda_i'$) be the inclusion maps, 
 $\varphi_i= \lambda_i \pi_i$
 and
 $\phi_i= \lambda_i' \pi_i'$.  $\varphi_r \phi_i= 0_{|G}$ for $i<r$ and
