--- a/groups/gtMisc.tex
+++ b/groups/gtMisc.tex
@@ -110,7 +110,7 @@ $|{\overline A}:{\overline Q}| = |A:Q\langle b \rangle| < |A:Q|$, so ${\overline
 $\exists B \subseteq A: B \cap Q\langle b \rangle = \langle b \rangle$ and $QB =A$.  $Q \cap B = Q \cap Q\langle b \rangle \cap B= $
 $Q \cap \langle b \rangle = 1$.
 \end{quote}
-{\bf Theorem 3:}   If $F$ is algebraically closed and $G$ is finite, $H(G,A)| \mid |G|$.
+{\bf Theorem 3:}   If $F$ is algebraically closed and $G$ is finite, $|H(G,A)| \mid |G|$.
 \begin{quote}
 \emph{Proof:} 
 Claim: $B(G, F^{\times})$ is divisible:
