--- a/groups/gtRepresentations.tex
+++ b/groups/gtRepresentations.tex
@@ -292,7 +292,7 @@ $Hom_{{\mathbb C}G}(V,W)$ is a vector space over ${\mathbb C}$.
 \emph{Proof:}  
 $ker(\theta)$ is a ${\mathbb C}G$-module, so by 
 Maschke, there is a ${\mathbb C}G$-module, $U$ such that $V= ker(\theta) \oplus U$.
-The map ${\overline  \theta}(u) = \theta(u)$ is a ${\mathbb C}G$-isomorphism from $U$ into $IM(\theta)$.
+The map ${\overline  \theta}(u) = \theta(u)$ is a ${\mathbb C}G$-isomorphism from $U$ into $im(\theta)$.
 If $u \in ker({\overline \theta})$, $u \in ker(\theta) \cap U$.  If $v \in V$ and $\theta(v)= w$, $v = k + u$,
 $k \in ker(\theta), u \in U$.  $w= \theta(v)= \theta(k) + {\overline \theta}(u) = \theta(u)$ and $Im(\theta)= Im({\overline \theta})$.
 $U \cong Im(\theta)$.
