small addition to permutations

--- a/groups/gtPermutations.tex
+++ b/groups/gtPermutations.tex
@@ -10,6 +10,8 @@ $ker(\pi) = \bigcap_{i=1}^n H^{x_i}$.
 \\
 {\bf Corollary:}  If $G$ is simple and $G > H$ with $|G:H| = k$ then
 $|G| \mid k!$.
+Equivalently, if $|G| \nmid k!$, $|ker(\pi)| > 1$ as above, so $G$ has
+a normal subgroup.
 \section {Imprimitivity}
 {\bf Definition 1:}
 A \emph{system of imprimitivity for permutation 
