--- a/groups/gtRepresentations.tex
+++ b/groups/gtRepresentations.tex
@@ -2493,4 +2493,92 @@ $\lambda = 1$, we get
 $\sum_g \chi(g^{-1}) \chi(g) = |G|$.
 \end{quote}
 
+\section {Some character tables}
+
+$$
+\begin{array}{|c|ccc|}
+\hline
+C_3&&&\\
+\hline
+|ccl(g)|&1&1&1\\
+|C_G(g)|&3&3&3\\
+g&1&a&a^2\\
+\hline
+\chi_1(g)&1&1&1\\
+\chi_2(g)&1&\omega&\omega^2\\
+\chi_3(g)1&&\omega^2&\omega\\
+\hline
+\end{array}
+$$
+
+$$
+\begin{array}{|c|ccc|}
+\hline
+S_3&&&\\
+\hline
+|ccl(g)|&1&2&3\\
+|C_G(g)|&6&2&3\\
+g&1&(123)&(12)\\
+\hline
+\chi_1(g)&1&1&1\\
+\chi_2(g)&1&1&-1\\
+\chi_3(g)&2&-1&0\\
+\hline
+\end{array}
+$$
+
+$$
+\begin{array}{|c|cccc|}
+\hline
+A_4&&&&\\
+\hline
+|ccl(g)|&1&3&4&4\\
+|C_G(g)|&12&4&3&3\\
+g&1&(12)(34)&(123)&(132)\\
+\hline
+\chi_1(g)&1&1&1&1\\
+\chi_2(g)&3&-1&0&0\\
+\chi_3(g)&1&1&\lambda&\lambda^2 \\
+\chi_4(g)&1&1&\lambda^2&\lambda \\
+\hline
+\end{array}
+$$
+
+$$
+\begin{array}{|c|ccccc|}
+\hline
+A_5&&&&&\\
+\hline
+|ccl(g)|&1&20&15&12&12\\
+|C_G(g)|&60&3&4&5&5\\
+g&1&(123)&(12)(34)&(12345)&(21345)\\
+\hline
+\chi_1(g)&1&1&1&1&1\\
+\chi_2(g)&4&1&0&-1&-1\\
+\chi_3(g)&5&-1&1&0&0\\
+\chi_4(g)&3&0&-1&{\frac {1 + \sqrt{-5}} {2}}&{\frac {1 - \sqrt{-5}} {2}}\\
+\chi_5(g)&3&0&-1&{\frac {1 - \sqrt{-5}} {2}}&{\frac {1 + \sqrt{-5}} {2}}\\
+\hline
+\end{array}
+$$
+
+$$
+\begin{array}{|c|ccccccc|}
+\hline
+S_5&&&&&&&\\
+\hline
+|ccl(g)|&1&10&20&15&30&20&24\\
+|C_G(g)|&120&12&6&8&4&6&5\\
+g&1&(12)&(123)&(12)(34)&(1234)&(123)(45)&(12345)\\
+\hline
+\chi_1(g)&1&1&1&1&1&1&1\\
+\chi_2(g)&1&-1&1&1&-1&-1&1\\
+\chi_3(g)&4&2&1&0&0&-1&-1\\
+\chi_4(g)&4&-2&1&-2&0&1&-1\\
+\chi_5(g)&6&0&0&1&0&0&1\\
+\chi_6(g)&5&1&-1&1&-1&1&0\\
+\chi_7(g)&5&-1&-1&1&1&-1&0\\
+\hline
+\end{array}
+$$
 
