--- a/groups/gtRepresentations.tex
+++ b/groups/gtRepresentations.tex
@@ -2495,6 +2495,8 @@ $\sum_g \chi(g^{-1}) \chi(g) = |G|$.
 
 \section {Some character tables}
 
+If $n=2k$, $D_{2n}$ has $k+3$ conjugacy classes.  If $n=2k+1$, $D_{2n}$ has $k+2$ conjugacy classes.
+
 $$
 \begin{array}{|c|ccc|}
 \hline
@@ -2538,8 +2540,8 @@ g&1&(12)(34)&(123)&(132)\\
 \hline
 \chi_1(g)&1&1&1&1\\
 \chi_2(g)&3&-1&0&0\\
-\chi_3(g)&1&1&\lambda&\lambda^2 \\
-\chi_4(g)&1&1&\lambda^2&\lambda \\
+\chi_3(g)&1&1&\omega&\omega^2 \\
+\chi_4(g)&1&1&\omega^2&\omega \\
 \hline
 \end{array}
 $$
@@ -2556,8 +2558,8 @@ g&1&(123)&(12)(34)&(12345)&(21345)\\
 \chi_1(g)&1&1&1&1&1\\
 \chi_2(g)&4&1&0&-1&-1\\
 \chi_3(g)&5&-1&1&0&0\\
-\chi_4(g)&3&0&-1&{\frac {1 + \sqrt{-5}} {2}}&{\frac {1 - \sqrt{-5}} {2}}\\
-\chi_5(g)&3&0&-1&{\frac {1 - \sqrt{-5}} {2}}&{\frac {1 + \sqrt{-5}} {2}}\\
+\chi_4(g)&3&0&-1&{\frac {1 + \sqrt{5}} {2}}&{\frac {1 - \sqrt{5}} {2}}\\
+\chi_5(g)&3&0&-1&{\frac {1 - \sqrt{5}} {2}}&{\frac {1 + \sqrt{5}} {2}}\\
 \hline
 \end{array}
 $$
