--- a/groups/gtRepresentations.tex
+++ b/groups/gtRepresentations.tex
@@ -2549,6 +2549,24 @@ $$
 $$
 \begin{array}{|c|ccccc|}
 \hline
+S_4&&&&\\
+\hline
+|ccl(g)|&1&6&8&3&6\\
+|C_G(g)|&24&4&3&8&4\\
+g&1&(12)&(123)& (12)(34)&(1234)\\
+\hline
+\chi_1(g)&1&1&1&1&1\\
+\chi_2(g)&1&-1&1&1&-1\\
+\chi_3(g)&2&0&-1&2&0\\
+\chi_4(g)&3&1&0&-1&-1\\
+\chi_5(g)&3&-1&0&-1&1\\
+\hline
+\end{array}
+$$
+
+$$
+\begin{array}{|c|ccccc|}
+\hline
 A_5&&&&&\\
 \hline
 |ccl(g)|&1&20&15&12&12\\
