--- a/groups/gtRepresentations.tex
+++ b/groups/gtRepresentations.tex
@@ -2365,7 +2365,7 @@ $U$ and $V$.  Then
 $(\varphi^G , \theta)_G = dim(Hom_{{\mathbb C}G}(U^G, V))$ and
 $(\varphi , \theta_{|H})_H = dim(Hom_{{\mathbb C}H}(U, V_{|H})$ and the result follows from
 the earlier theorem.  Since any character is the linear combination of irreducible characters,
-the result follows from the bilinarity of the form.
+the result follows from the bilinearity of the form.
 \end{quote}
 {\bf Remark:}  Note that $deg(\phi^G)= \phi^G(1)= {\frac {|G|} {|H|}} \phi(1)$.
 We define  $f^G_x(y) = 1$, if $y \in x^G$ and
