small format fix

--- a/groups/gtRepresentations.tex
+++ b/groups/gtRepresentations.tex
@@ -2508,7 +2508,7 @@ g&1&a&a^2\\
 \hline
 \chi_1(g)&1&1&1\\
 \chi_2(g)&1&\omega&\omega^2\\
-\chi_3(g)1&&\omega^2&\omega\\
+\chi_3(g)&1&\omega^2&\omega\\
 \hline
 \end{array}
 $$
