--- a/science/physics.tex
+++ b/science/physics.tex
@@ -1337,17 +1337,17 @@ $f \approx {\frac {2eV}{h}}$.
 \section{Quantum Mechanics}
 {\bf Schrodinger and its discontents:}
 $-{\frac {\hbar^2} {2m}} {\frac {\partial^2 \Psi (x, t)} {\partial x^2}} +
-U \Psi(x,t)= i \hbar {\frac {\partial \Psi(x,t)} {\partial t}}$, $\int_S |\Psi|^2 =1$.  
+V \Psi(x,t)= i \hbar {\frac {\partial \Psi(x,t)} {\partial t}}$, $\int_S |\Psi|^2 =1$ (See quantum operators).
 $\langle Q(x,p)\rangle= 
 \int \Psi^* Q(x,{\frac {\hbar} {i}}{\frac {\partial}{\partial x}}) \Psi dx$.
 $\hat{H}= -{\frac {\hbar^2} {2m}} {\frac {\partial^2} {{\partial x}^2}} + V(x)$.
 Separation of variables (for well defined
 energy): $\Psi(x,t)= \varphi(x) \phi(t)$. 
 $-{\frac {\hbar^2} {2m}} \varphi''(x) \phi(t) + 
-U \varphi(x) \phi(t)= i \hbar \varphi(x) {\dot \phi}(t)$. 
-So $-{\frac {\hbar^2} {2m}} {\frac {\varphi''(x)} {\varphi(x)}} + U = E=
+V \varphi(x) \phi(t)= i \hbar \varphi(x) {\dot \phi}(t)$. 
+So $-{\frac {\hbar^2} {2m}} {\frac {\varphi''(x)} {\varphi(x)}} + V = E=
 i \hbar {\frac {{\dot \phi}(t)} {\phi(t)}}$. $\phi(t)= A e^{-i(E/\hbar)t}$,
-$E= \hbar \omega$.  $E=K+U$; system is \emph{bound} if $K_0<U_0$.  The
+$E= \hbar \omega$.  $E=K+V$; system is \emph{bound} if $K_0<V_0$.  The
 remaining time-independent equation is
 $\varphi'(x)= k^2 (V-E) \varphi(x), k^2= {\frac {2m(V-E)} {\hbar^2}}$.  
 If $V-E>0$ (bound states), the solution is 
