--- a/science/physics.tex
+++ b/science/physics.tex
@@ -1336,11 +1336,16 @@ difference, electrons tunnel and we get dc, if dc potential is applied, we get a
 $f \approx {\frac {2eV}{h}}$.
 \section{Quantum Mechanics}
 {\bf Schrodinger and its discontents:}
-$-{\frac {\hbar^2} {2m}} {\frac {\partial^2 \Psi (x, t)} {\partial x^2}} +
-V \Psi(x,t)= i \hbar {\frac {\partial \Psi(x,t)} {\partial t}}$, $\int_S |\Psi|^2 =1$ (See quantum operators).
-$\langle Q(x,p)\rangle= 
-\int \Psi^* Q(x,{\frac {\hbar} {i}}{\frac {\partial}{\partial x}}) \Psi dx$.
-$\hat{H}= -{\frac {\hbar^2} {2m}} {\frac {\partial^2} {{\partial x}^2}} + V(x)$.
+$$-{\frac {\hbar^2} {2m}} {\frac {\partial^2 \Psi (x, t)} {\partial x^2}} +
+V \Psi(x,t)= i \hbar {\frac {\partial \Psi(x,t)} {\partial t}}, \int_S |\Psi|^2 =1$$
+
+See quantum operators.
+
+$$\langle Q(x,p)\rangle= 
+\int \Psi^* Q(x,{\frac {\hbar} {i}}{\frac {\partial}{\partial x}}) \Psi dx$$.
+
+$$\hat{H}= -{\frac {\hbar^2} {2m}} {\frac {\partial^2} {{\partial x}^2}} + V(x)$$.
+
 Separation of variables (for well defined
 energy): $\Psi(x,t)= \varphi(x) \phi(t)$. 
 $-{\frac {\hbar^2} {2m}} \varphi''(x) \phi(t) + 
@@ -1364,7 +1369,9 @@ ${\frac {1} {2m}}[{\frac {\hbar} {i}} {\frac {d^2 \Psi}{dx^2}} + {\frac 1 2} m^2
 Define $a_{\pm} = {\frac 1 {\sqrt {2m}}} ({\frac {\hbar} {i}} {\frac d {dx}} \pm i m \omega x)$.
 $a_+ a_- = {\frac {1} {2m}}[{\frac {\hbar} {i}} {\frac {d^2 \Psi}{dx^2}} + {\frac 1 2} m^2 \omega^2 x^2 \Psi] - 
 {\frac 1 2} \hbar \omega$.  If $\Psi$ solves the Schroedinger equation with energy $E$, $a_+ \Psi$  solves
-the Schroedinger equation with energy $E + \hbar \omega$.
+the Schroedinger equation with energy $E + \hbar \omega$.\\
+\\
+\emph{Solution to wave equation:} $Psi(x, t) = A e^{i(kx- \omega t}$.  Note: $\hbar k = p$ and $\hbar \omega = E$.
 \\
 \\
 {\bf Potential well:}  
