--- a/science/physics.tex
+++ b/science/physics.tex
@@ -289,7 +289,7 @@ $\rho= {\sqrt {\frac {P_{reflected}} {P_{transmitted}}}}$.
 {\bf Op Amp:} $ v_o= A_{OL}v_d$.  Transfer and two terminal input and output.
 Op amp rules: (1) No current into op amp and
 (2) with negative feedback $V_+ = V_-$.
-$R_i \approx 10^4 \Omega$, $A \approx 10^5$, $R_L \approx 10^3 \Omega$.    
+$R_i \approx 10^4 \Omega$, $A \approx 10^5$, $R_o \approx 10^2 \Omega$.    
 \\
 \\
 \emph{Channel capacity:} $C= B lg(1+{\frac S N}) b/s$.
