--- a/science/math2.tex
+++ b/science/math2.tex
@@ -2716,7 +2716,9 @@ There is an element of order $5$ in $G$ since $g(x)$ is irreducible.  Complex co
 is an automorphism of order $2$.  These generate $S_5$.
 \end{quote}
 {\bf Computing the Galois group for an arbitrary polynomial:}
-Suppose, 
+Let $f(x)= x^p + a_{p-1}x^{p-1} + \ldots + a_0$ for $p$ primer; if $f(x)$ is irreducible,
+${\cal G}(E/F)$ contains a $p$-cycle.
+Now, suppose, 
 $f(t) = t^n -s_1 t^{n-1} + \ldots + (-1)^{n}s_n$ over the field $k$.  
 Let $K$ be the splitting field of $f$ over $k$ and $G = {\cal G}(K/k)$.
 Assume
