--- a/science/physics.tex
+++ b/science/physics.tex
@@ -1355,7 +1355,8 @@ $$\hat{H}= -{\frac {\hbar^2} {2m}} {\frac {\partial^2} {{\partial x}^2}} + V(x)$
 In addition, 
 $\langle x \rangle = \int \overline{\psi} x \psi dr$ and
 $\langle p_x \rangle = \int \overline{\psi} - \hbar i {\frac {\partial} {\partial t}} \psi dr$.
-
+\\
+\\
 Now starting with Schroedinger, we can use separation of variables (for well defined
 energy): $\Psi(x,t)= \varphi(x) \phi(t)$. 
 $-{\frac {\hbar^2} {2m}} \varphi''(x) \phi(t) + 
@@ -1387,7 +1388,7 @@ $a_+ a_- = {\frac {1} {2m}}[{\frac {\hbar} {i}} {\frac {d^2 \Psi}{dx^2}} + {\fra
 {\frac 1 2} \hbar \omega$.  If $\Psi$ solves the Schroedinger equation with energy $E$, $a_+ \Psi$  solves
 the Schroedinger equation with energy $E + \hbar \omega$.\\
 \\
-\emph{Solution to wave equation:} $Psi(x, t) = A e^{i(kx- \omega t}$.  Note: $\hbar k = p$ and $\hbar \omega = E$.
+\emph{Solution to wave equation:} $\Psi(x, t) = A e^{i(kx- \omega t}$.  Note: $\hbar k = p$ and $\hbar \omega = E$.
 \\
 \\
 {\bf Potential well:}  
