--- a/science/math4.tex
+++ b/science/math4.tex
@@ -903,9 +903,8 @@ continuously differentiable and
 $det(g'(x)) \ne 0, \forall x \in A$.  If $f: g(A) \rightarrow R$ is integrable
 then $\int_{g(A)} f = \int_A f \circ g |\det(g')|$.
 \begin{quote}
-\emph{Proof:} If $A$ is an $n \times n$ matrix. $det(A)$ is the volume of the 
-image of the unit $n$-cube
-under $A$.  Todo.
+\emph{Proof:} Use the following: If $A$ is an $n \times n$ matrix. $det(A)$ is the volume of the 
+image of the unit $n$-cube under $A$.
 \end{quote}
 Let ${\cal T}^k (V)= \{ T:V \rightarrow {\mathbb R} \}, V \subseteq 
 {\mathbb R}^n $
