--- a/science/math2.tex
+++ b/science/math2.tex
@@ -515,7 +515,7 @@ ${\mathfrak D}$.  Every non-zero ideal of ${\mathfrak D}$ can be written as a pr
 ideals uniquely up to the order of factors.
 \begin{quote}
 \emph{Proof:}  
-Todo.
+Follows from the above.
 \end{quote}
 {\bf Definition:}
 $N({\mathfrak a})= {\mathfrak D}/ {\mathfrak a}$.
@@ -3343,12 +3343,6 @@ For $K=R(\theta)$, $\exists C(K): \forall A, \exists 0 \ne \alpha \in A:
 number of ideals containing $B$. $\exists \alpha: (\alpha)=AD$.  $AN \sim AD$.
 \end{quote}
 {\bf Theorem:}
-If $A$ is an ideal in $R(\theta)$, $\exists B$ such that $AB= (a)$ for some
-$a$ in $R(\theta)$.
-\begin{quote}
-\emph{Proof:} Todo.
-\end{quote}
-{\bf Theorem:}
 If $A, B$ are ideals in $R(\theta)$,with  $AC=BC$ then $A=B$.
 \begin{quote}
 \emph{Proof:} $\exists k>0: A^k= (\alpha)$, so
@@ -3360,11 +3354,6 @@ If $P|AB$ and $P$ does not divide $A$ then $P|B$.
 \emph{Proof:} $a \in A, b \in B$ $P \supseteq AB$ but $P \nsupseteq A$,
 so $ab \in P$.  $\exists c: ac \in 1 +P$.  $ac - 1 \in P$ and
 $abc - b \in P$ but $ab \in P$ so $b \in P$ and $P \supseteq B$.
-\end{quote}
-{\bf Theorem:}
-Every ideal has finitely many distinct divisors.
-\begin{quote}
-\emph{Proof:} Todo.
 \end{quote}
 {\bf Theorem:}
 Every prime ideal must divide the principal ideal of a rational prime.
@@ -3379,26 +3368,11 @@ is unique apart from order.
 $A= P_1B_1$.  If $B_1 \neq D$, $B_1$ is contained in a maximal ideal and so on
 giving a chain, $A \subset B_1 \subset B_2 \subset \ldots$ which must terminate.
 \end{quote}
-{\bf Theorem:}
-Every rational integer belongs to finitely many ideals.
+${\cal D}_K$ is noetherian.
 \begin{quote}
-\emph{Proof:} Todo.
-\end{quote}
-{\bf Theorem:}
-Rational prime is \emph{ramified}
- if its principal ideal factors into prime ideals in which one
-prime ideal is repeated.  If this happens, $p | \Delta(\alpha_1 , \ldots , \alpha_n)$.
-\begin{quote}
-\emph{Proof:} Todo.
-\end{quote}
-{\bf Theorem:}
-The ring of integers ${\cal D}_K$ in the number field, $K$, has the following properties:
-${\cal D}_K$ 
-is a domain with field of fractions $K$.
-${\cal D}_K$ is noetherian (Use the fact that
-${\cal D}_K$  is a free abelian group of degree $n= K:{\mathbb Q}$.)
-\begin{quote}
-\emph{Proof:} Todo.
+\emph{Proof:} 
+Use the fact that
+${\cal D}_K$  is a free abelian group of degree $n= K:{\mathbb Q}$.
 \end{quote}
 {\bf Definition:}
 Let ${\cal D}$ be a ring of integers, ${\mathfrak a}$
@@ -3410,13 +3384,11 @@ Every non zero prime ideal ${\mathfrak p}$ of ${\cal D}$ is maximal. (
 ${\cal D}/{\mathfrak a}$ is a finite integral domain.)  Fractional ideals form an abelian
 group.  
 \begin{quote}
-\emph{Proof:} Todo.
-\end{quote}
-{\bf Theorem:}
-Every non-zero ideal of
-${\cal D}$ can be factored into prime ideals (${\cal D}$ is noetherian).
-\begin{quote}
-\emph{Proof:} Todo.
+\emph{Proof:} 
+Let ${\mathfrak p}$ be prime and $0 \ne \alpha \in {\mathfrak p}$. $N = N(\alpha) \in {\mathfrak p}$
+and $\langle N \rangle \subseteq {\mathfrak p}$.  ${\mathfrak D}/{\mathfrak p}$ is a
+qutiont ring of ${\mathfrak D} / N({\mathfrak D})$ which is finite.  Since ${\mathfrak D}/{\mathfrak p}$
+is finite, ${\mathfrak p}$ is maximal.
 \end{quote}
 {\bf Norm of an ideal:} 
 $N({\mathfrak a})= |{\mathfrak D}/{\mathfrak a}|$; if ${\mathfrak a}= \langle a \rangle$ 
@@ -3431,31 +3403,11 @@ $\Delta_{K/{\mathbb Q}}(\alpha_1 , \alpha_2, \ldots , \alpha_n )=
 Every non-zero ideal of ${\cal D}$ has a finite number
 of divisors.  
 \begin{quote}
-\emph{Proof:} Todo.
+\emph{Proof:} Follows from prime factorization.
 \end{quote}
 {\bf Theorem:}
-A non-zero rational integer belongs to a finite number
-of ideals of ${\cal D}$.  
+Only a finite number of ideals of ${\cal D}$ have a given norm.  
 \begin{quote}
-\emph{Proof:} Todo.
-\end{quote}
-{\bf Theorem:}
-Only a finite number of ideals of ${\cal D}$
-have a given norm.  
-\begin{quote}
-\emph{Proof:} Todo.
-\end{quote}
-{\bf Theorem:}
-If ${\mathfrak a} \ne {\mathfrak b}$ are ideals of ${\cal D}$ then
-$\exists \alpha \in {\mathfrak a}: \alpha {\mathfrak a}^{-1} + {\mathfrak b}= {\cal D}$.
-\begin{quote}
-\emph{Proof:} Todo.
-\end{quote}
-{\bf Theorem:}
-Let ${\mathfrak a} \ne 0$ be an ideal of ${\cal D}$ and $0 \ne \beta \in {\mathfrak a},
-\exists \alpha \in {\mathfrak a}: {\mathfrak a}= \langle  \alpha, \beta \rangle$.
-\begin{quote}
-\emph{Proof:} Todo.
 \end{quote}
 {\bf Minkowski:}
 $X$ is convex if $x, y \in X \rightarrow \lambda x + (1-\lambda)y \in X,
