--- a/science/math2.tex
+++ b/science/math2.tex
@@ -3434,6 +3434,13 @@ of divisors.
 Only a finite number of ideals of ${\cal D}$ have a given norm.  
 \begin{quote}
 \end{quote}
+{\bf Observations:} $N({\mathfrak a}) = |{\mathfrak D}_K/{\mathfrak a}|$.
+If ${\mathfrak a} = (a)$ then $N({\mathfrak a})=N(a)$. $N(a+b\sqrt{d}))= |a^2+db^2|$.
+If $N({\mathfrak a})$ is prime, so is ${\mathfrak a}$. $N({\mathfrak a}) \in {\mathfrak a}$,
+so $N({\mathfrak a}) \mid {\mathfrak a}$.  If ${\mathfrak a}$ is prime, it divides exactly
+one $p \in {\mathbb Z}$.
+\\
+\\
 {\bf Minkowski:}
 $X$ is convex if $x, y \in X \rightarrow \lambda x + (1-\lambda)y \in X,
 \forall \lambda \in [0,1]$.
