--- a/science/math2.tex
+++ b/science/math2.tex
@@ -3402,6 +3402,8 @@ ${\cal D}_K$  is a free abelian group of degree $n= K:{\mathbb Q}$.
 {\bf Definition:}
 Let ${\cal D}$ be a ring of integers, ${\mathfrak a}$
 is a fractional ideal if $\exists c \in {\cal D}$: $c {\mathfrak a} \subseteq {\cal D}$.
+$p$ is regular iff it does not divide the class number of ${\mathbb Q}(\eta)$ where
+$\eta = e^{\frac {2 \pi i} {p}}$.
 \\
 \\
 {\bf Theorem:}
