--- a/science/math2.tex
+++ b/science/math2.tex
@@ -156,7 +156,7 @@ $\alpha_1 u_1 , \alpha_2 u_2 , \ldots , \alpha_s u_s$  is a basis for $H$.
 \emph{Proof:}  By induction.  Use the usual minimal divisor in the relations trick.
 \end{quote}
 {\bf Theorem:}  Let $G$ be a free abelian group of rank $n$ and $H$ a subgroup.  $G/H$ is
-finite iff $rank(h)=rank(G)$; in that case, $|G/H| = |det(\alpha_{ij}|$ (from the previous theorem).
+finite iff $rank(h)=rank(G)$; in that case, $|G/H| = |det(\alpha_{ij})|$ (from the previous theorem).
 \begin{quote}
 \emph{Proof:} Follows from previous result.
 \end{quote}
