--- a/science/physics.tex
+++ b/science/physics.tex
@@ -2256,7 +2256,8 @@ $\Gamma=
 \int {\cal M}^2 (2 \pi)^4 \delta(p_1-p_2-p_3 - \ldots - p_n) \times
 \prod_{j=2}^n 2 \pi \delta(p_j^2 -m_2^2 c^2) \theta(p^{(0)}_j) {\frac {d^4 p_j} {(2 \pi )^4}}$.
 For Feynman diagram, 
-(1) label incoming edges and outgoing edges with four vectors $p_1, \ldots , p_n$ and note direction, label internal edges with
+(1) label incoming edges and outgoing edges with four vectors $p_1, \ldots , p_n$ and note direction,
+label internal edges with
 $q_1, \ldots, q_m$,(2) for each vertex label coupling constant (e.g.- $ig$),
 (3) get propagators for internal edges by writing factor ${\frac i {q_j^2- m_j^2 c^2}}$,
 (4) for each vertex write $\delta$ function (e.g. - $\delta(k_1+k_2+k_3)$, $+$ for out edges, $-$ for in edges (Kirchoff applies),
