--- a/science/qc.tex
+++ b/science/qc.tex
@@ -9,7 +9,8 @@ scalars with operators (e.g. - $p$, etc).
 \\
 \\
 {\bf Infinite degrees of freedom:}
-Quantum Field Theory describes quantum systems with an infinite number of degrees of freedom.  Here is an example:
+Quantum Field Theory describes quantum systems with an infinite number of degrees of freedom.
+Here is an example:
 Consider $n$ particles of mass $m$ connected by identical springs with spring 
 constant $k$.  Let $y_i$ be the displacement of the
 particles from their equilibrium position.
@@ -85,7 +86,8 @@ $$
 \right), \gamma= {\frac 1 {\sqrt {1-v^2/c^2)}}}.$$
 \\
 \\
-{\bf Yukawa potential:}  Neutral scalar field, ${\cal L}= - ({\frac 1 2} ({\frac {\partial \phi} {\partial x_{\mu}}})^2
+{\bf Yukawa potential:}  Neutral scalar field,
+${\cal L}= - ({\frac 1 2} ({\frac {\partial \phi} {\partial x_{\mu}}})^2
 + \mu^2 \phi^2)$.  $E^2- |p|^2 c^2= m^2 c^4$.  
 $E \rightarrow i \hbar {\frac {\partial} {\partial t}}$ and
 $p \rightarrow - i \hbar {\frac {\partial} {\partial x_{\mu}}}$, $\mu \leftrightarrow {\frac {mc} {\hbar}}$.
@@ -810,11 +812,13 @@ $\sum_s \epsilon_i^{(s)} (\epsilon_j^{(s)})^*= \delta_{ij} - \hat{p}_i \hat{p}_j
 \end{tabular}
 \end{center}
 {\bf Feynman rules for QED:}  The rules for QED.
-To calculate ${\cal M}$: (1) To eac external line, draw directed segment labeled by momentum,(2) for electron into (out of)
+To calculate ${\cal M}$: (1) To each external line, draw directed segment
+labeled by momentum,(2) for electron into (out of)
 vertex use $u$ (${\overline u}$) switch for positron, (3) use vertex coupling $ig_e \gamma^{\mu}$, $g_e= e {\sqrt {\frac {4 \pi} {\hbar c}}}$,
-(4) Use propagators ${\frac {i(\gamma^{\mu} q_{\mu} + mc)} {q^2-m^2 c^2}}$ for $e^+, e^-$ and ${\frac {ig_{\mu, \nu}} {q^2}}$ for
+(4) Use propagators ${\frac {i(\gamma^{\mu} q_{\mu} + mc)} {q^2-m^2 c^2}}$ for $e^+,
+e^-$ and ${\frac {ig_{\mu, \nu}} {q^2}}$ for
 $\gamma$, (5) apply $\delta$ function $\delta^{(4)}(k_1+k_2+k_3)$ (inwards) at each vertex, (6) integrate over internal momentum
-${\frac {d^4 q} {(2 \pi)^4}}$, (7) cancel the $\delta$'s replacing them wiht $i$, (8) do anti-symmetrization in diagrams interchanging only
+${\frac {d^4 q} {(2 \pi)^4}}$, (7) cancel the $\delta$'s replacing them with $i$, (8) do anti-symmetrization in diagrams interchanging only
 direction.  Example: \emph{electron-electron} scattering ${\cal M}= 
 - {\frac {g_e^2}{(p_1-p_3)^2}} [{\overline u}(3) \gamma^{\mu}u(1)] [{\overline u}(3) \gamma_{\mu} u(2)]
 + {\frac {g_e^2}{(p_1-p_4)^2}} [{\overline u}(4) \gamma^{\mu}u(1)] [{\overline u}(3) \gamma_{\mu} u(2)] $.
