--- a/science/crypto.tex
+++ b/science/crypto.tex
@@ -71,6 +71,10 @@ S^{-1}.$$
 Total key including rotor wiring (in bits):
 $67.1 + 3 \times 88.4 = 312.3$.
 \\
+\begin{figure} 
+\center
+\includegraphics[width=0.8\textwidth,natwidth=642,natheight=610, height=80mm, width=88mm]{Enigma.pdf}
+\end{figure}
 \emph{Method of Batons (no Stecker):} 
 Let $N$ be the fast rotor and $Z$ the combined 
 effect of the other apparatus, then,
