--- a/science/crypto.tex
+++ b/science/crypto.tex
@@ -1883,6 +1883,10 @@ minimize differences between 1s and 0s if one input bit is held constant,
 (4)$Ham(S(x) \oplus S(x \oplus 001100))>1$, and
 (5) $S(x) \ne S(x \oplus 11ab00)$.
 \\
+\begin{figure} 
+\center
+\includegraphics[width=0.8\textwidth,natwidth=642,natheight=610, height=80mm, width=88mm]{des.pdf}
+\end{figure}
 \\
 {\bf Differential cryptanalysis: }  Notation: $ x \rightarrow y, p$ means
 input difference $x$ produces output $y$ with probability $p$.
@@ -3034,6 +3038,14 @@ $S_{23}(Y)= S_{29}(Y) \oplus S_{31}(X) \oplus 1$ and
 $a= S_{23, 29}(P_L \oplus P_R  \oplus C_L) \oplus S_{31}(P_L \oplus C_L \oplus C_R)
 \oplus S_{31}F(P_L \oplus C_L \oplus K_0)$.
 \\
+\begin{figure} 
+\center
+\includegraphics[width=0.8\textwidth,natwidth=642,natheight=610, height=80mm, width=88mm]{feal1.pdf}
+\end{figure}
+\begin{figure} 
+\center
+\includegraphics[width=0.8\textwidth,natwidth=642,natheight=610, height=80mm, width=88mm]{feal2.pdf}
+\end{figure}
 \\
 {\bf RC4 Weakness:}  Let $S_i$ be the state at time $i$, $N= 2^n$ ($n=8$,
 usually).
