--- a/science/math4.tex
+++ b/science/math4.tex
@@ -51,8 +51,8 @@ c & d \\
 \gamma & \delta \\
 \end{array}
 \right)$.
-If $\tau_{a,b,c,d}(z) = {\frac {az+b} {cz+d}}\}$, $\tau^{-1}(a,b,c,d) = {\frac {dz-b} {a-cz}}$.
-If $\tau(z) = {\frac {(\gamma w_1)z+w_2} {\gamma z+1}}\}$, with $\gamma = {\frac {w_2 - w_3} {w_3 - w_1}}$,
+If $\tau_{a,b,c,d}(z) = {\frac {az+b} {cz+d}}$, $\tau^{-1}(a,b,c,d) = {\frac {dz-b} {a-cz}}$.
+If $\tau(z) = {\frac {(\gamma w_1)z+w_2} {\gamma z+1}}$, with $\gamma = {\frac {w_2 - w_3} {w_3 - w_1}}$,
 then $\tau(\infty) = w_1$, $\tau(0) = w_2$ $\tau(1) = w_3$.  In the projective plane,
 there is always a projective map
 that takes three non-colinear points into three arbitrary points non-colinear points, and, in fact,
