--- a/science/math2.tex
+++ b/science/math2.tex
@@ -20,12 +20,15 @@ substitute $x= x - {\frac {b} {4a}}$ and
 divide by $a$ to get $x^4+ px^2 + qx + r$.  Again following Galois,
 $S_4 \supseteq A_4 \supseteq C_4 \supseteq Z_2 \supseteq 1$.  
 $\Theta_1 = (x_1+x_2)(x_3+x_4)$ is fixed by $C_4$ but not $A_4$.
-The $\Theta_i$ are solutions of $\Theta^3 -b_1 \Theta^2 + b_2 \Theta_3 -b_3$ with
+The $\Theta_i$ are solutions of $\Theta^3 -b_1 \Theta^2 + b_2 \Theta -b_3$ with
 $b_1= 2p, b_2= p^2-4r, b_3= -q^2$ and
 $D=16 p^4r-4p^3q^2-128p^2r^2+144 p q^2r -27 q^4 +256 r^3$.
 Look at
 $(y^2 + p)^2 = py^2 -qy -r$ and pick $z$ to make right hand side
-$(y^2 + p + z)^2 = (p+2z)y^2 -qy + (p^2 -r +2pz + z^2 )$ a perfect square.
+$(y^2 + p + z)^2 = (p+2z)y^2 -qy + (p^2 -r +2pz + z^2 )$ a perfect square. Note:
+For final field adjunction, pick $\varphi= (r_1 +r_2)$ with $\sigma = (13)(24)$.
+$x^2+\varphi (\varphi^{\sigma})= 0$ has $\varphi$  as a solution and $\varphi (\varphi^{\sigma})$ is in
+the base fixed field.
 \\
 \\
 {\bf Fundamental Theorem of Algebra:}  If $f(z) \in {\mathbb C}[x]$ then $f(z)=0$
