--- a/science/math2.tex
+++ b/science/math2.tex
@@ -26,9 +26,16 @@ $D=16 p^4r-4p^3q^2-128p^2r^2+144 p q^2r -27 q^4 +256 r^3$.
 Look at
 $(y^2 + p)^2 = py^2 -qy -r$ and pick $z$ to make right hand side
 $(y^2 + p + z)^2 = (p+2z)y^2 -qy + (p^2 -r +2pz + z^2 )$ a perfect square. Note:
-For final field adjunction, pick $\varphi= (r_1 +r_2)$ with $\sigma = (13)(24)$.
+For final field adjunction, pick $\varphi= (x_1 +x_2)$ with $\sigma = (13)(24)$.
 $x^2+\varphi (\varphi^{\sigma})= 0$ has $\varphi$  as a solution and $\varphi (\varphi^{\sigma})$ is in
 the base fixed field.
+$x_1 +x_2)= \sqrt{-\Theta_1}$,
+$x_3 +x_4)= -\sqrt{-\Theta_1}$,
+$x_1 +x_3)= \sqrt{-\Theta_2}$,
+$x_2 +x_4)= -\sqrt{-\Theta_2}$,
+$x_1 +x_4)= \sqrt{-\Theta_3}$,
+$x_2 +x_3)= -\sqrt{-\Theta_2}$.
+$2 x_2 = \sqrt{-\Theta_1} + \sqrt{-\Theta_2}+ \sqrt{-\Theta_3}$.
 \\
 \\
 {\bf Fundamental Theorem of Algebra:}  If $f(z) \in {\mathbb C}[x]$ then $f(z)=0$
