--- a/science/crypto.tex
+++ b/science/crypto.tex
@@ -1335,7 +1335,7 @@ $x_i \leq 1$, put ${\vec \alpha} = (\alpha_1, \alpha_2, \ldots , \alpha_n)$ then
 define $T_{\vec \alpha}(r) = (x_1, x_2, \ldots, x_n)$.
 If $s \ne t \in S$ implies $T(r) \ne T(s)$ then
 $vol(S) = vol(T(S))$. $S = \bigcap_{{\vec \alpha} \in {\mathbb Z}^n} {\vec \alpha} + T(S)$.
-$vol(T_{\vec 0}(S)) \leq 1$.   So if $vol(\bigcap_{\alpha}T_{\vec alpha}(S)) > 1$,
+$vol(T_{\vec 0}(S)) \leq 1$.   So if $vol(\bigcap_{\alpha}T_{\vec \alpha}(S)) > 1$,
 $S$ has two distinct non-zero
 points, $r_1, r_2$ such that $0 \ne r_1 - r_2 \in {\mathbb Z}^n$. Since $S$ is centrally symmetric, $-r_1, -r_2 \in S$
 also.  
