--- a/science/crypto.tex
+++ b/science/crypto.tex
@@ -1333,7 +1333,7 @@ For ${\vec r} \in S'$, ${\vec r} = (\alpha_1 + x_1, \alpha_2 + x_2, \ldots, \alp
 where $\alpha_i \in {\mathbb Z}$ and
 $x_i \leq 1$, put ${\vec \alpha} = (\alpha_1, \alpha_2, \ldots , \alpha_n)$ then
 define $T_{\vec \alpha}(r) = (x_1, x_2, \ldots, x_n)$.
-If $s \ne t \in S$ implies $T(r) \ne T(s)$ then
+If $s \ne t \in S$ implies $T(t) \ne T(s)$ then
 $vol(S) = vol(T(S))$. $S = \bigcap_{{\vec \alpha} \in {\mathbb Z}^n} {\vec \alpha} + T(S)$.
 $vol(T_{\vec 0}(S)) \leq 1$.   So if $vol(\bigcap_{\alpha}T_{\vec \alpha}(S)) > 1$,
 $S$ has two distinct non-zero
