--- a/science/crypto.tex
+++ b/science/crypto.tex
@@ -1323,7 +1323,7 @@ if $x,y \in S \rightarrow tx + (1-t)y \in S, 0 \leq t \leq 1$.
 \\
 \\
 {\bf Minkowski's Theorem: } Let $\Lambda$ be a lattice in ${\mathbb R}^n$ and $S \subseteq {\mathbb R}^n$
-a convex, centrally symmetric region in ${\mathbb R}^n$.  If $vol(S) > 2^n det(\lambda)$ then $S$ has
+a convex, centrally symmetric region in ${\mathbb R}^n$.  If $vol(S) > 2^n det(\Lambda)$ then $S$ has
 at least one non-zero lattice point of $\Lambda$.
 \begin{quote}
 \emph{Proof:}
